[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lcc"
version = "0.1.2"
description = "Library Control CLI for booking.lib.buaa.edu.cn"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "UNLICENSED" }
authors = [{ name = "kawarox" }]

[project.scripts]
lcc = "lcc.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
