[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bhlib"
version = "0.3.4"
description = "CLI for booking.lib.buaa.edu.cn (BUAA library)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "UNLICENSED" }
authors = [{ name = "kawarox" }]
dependencies = [
  "certifi>=2024.0.0",
  "platformdirs>=4.0.0",
  "cryptography>=39.0.0",
]

[project.scripts]
bhlib = "bhlib.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bhlib = ["certs/*.pem"]
