[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bhlib"
version = "0.6.2"
description = "CLI for booking.lib.buaa.edu.cn (BUAA library)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "UNLICENSED" }
authors = [{ name = "kawarox" }]
dependencies = [
  "certifi>=2024.0.0",
  "platformdirs>=4.0.0",
]

[project.optional-dependencies]
# Native deps for secure password storage and in-process AES.
# Skip on iOS a-Shell (cryptography has no iOS wheel, keyring has no backend);
# bhlib auto-falls back to system `openssl` for AES and plain-text password storage.
secure = [
  "cryptography>=39.0.0",
  "keyring>=25.0.0",
]

[project.scripts]
bhlib = "bhlib.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bhlib = ["certs/*.pem"]
